syntax = "proto3";

package attendance;

import "./commons.proto";
import "attendance/messages.proto";

service AttendanceService {
  rpc FindAll(AttendanceQuery) returns (AttendanceList);
  rpc FindById(commons.Id) returns (AttendanceRecord);
  rpc Count(AttendanceQuery) returns (commons.Count);
}
